syntax = "proto3";

message PushMsgStruct {
    repeated UserInfo  userInfo = 1;
    string    message  = 2;
}

message UserInfo {
    string deviceID = 1;
    string name = 2;
    string deviceOS = 3;
}